Fix cookie consent on mobile

--- a/src/style/Container.scss
+++ b/src/style/Container.scss
@@ -20,3 +20,8 @@
     text-decoration: none;
   }
 }
+
+.cookie-button-wrapper {
+  display: flex;
+  flex-direction: column-reverse;
+}
